# project

./: .gitignore  LICENSE  README.md  app.py  aws_service.py  face_recognition_service.py  github_setup_instructions.md  models.py  pyproject.toml  requirements-github.txt  routes.py  utils.py
docs/: README.md  aws_cost_estimation.md  aws_deployment_guide.md  face_recognition_lambda_guide.md  s3_face_recognition_setup.md
static/css/: custom.css
static/js/: capture.js  common.js  student_register.js
templates/: attendance_reports.html  base.html  dashboard.html  error.html  login.html  register.html  student_register.html  take_attendance.html
